--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,10 +1,10 @@
-/*!
+/*
 Theme Name: AreaVoices
 Theme URI: http://areavoices.com/
 Author: Forum Communications Company
 Author URI: http://forumcomm.com/
 Description: The custom WordPress theme built for AreaVoices contributors.
-Version: 1.16.03.10
+Version: 1.16.03.21
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: areavoices
