--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: http://areavoices.com/
 Author: Forum Communications Company
 Author URI: http://forumcomm.com/
 Description: The custom WordPress theme built for AreaVoices contributors.
-Version: 1.16.03.21
+Version: 1.16.03.23
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: areavoices
@@ -434,7 +434,8 @@ a {
       position: absolute;
       top: 1.5em;
       left: -999em;
-      z-index: 99999; }
+      z-index: 99999;
+      background-color: #fff; }
       .main-navigation ul ul ul {
         left: -999em;
         top: 0; }
@@ -444,7 +445,7 @@ a {
         width: 200px; }
     .main-navigation ul li:hover > ul,
     .main-navigation ul li.focus > ul {
-      left: auto; }
+      left: 0em; }
   .main-navigation li {
     float: left;
     position: relative; }
