--- a/style.css
+++ b/style.css
@@ -608,6 +608,10 @@ a {
 /*--------------------------------------------------------------
 ## Comments
 --------------------------------------------------------------*/
+
+.comment-list, .comment-list ol{
+  list-style-type: none;
+}
 .comment-content a {
   word-wrap: break-word; }
 
