--- a/sass/_av-misc.scss
+++ b/sass/_av-misc.scss
@@ -536,10 +536,10 @@ height: 100%;
   .av-home.av-jp-social a.sd-button:before {
       font: 400 21px/1 Genericons !important;
   }
-  a.av-contrib-button {
+  /*a.av-contrib-button {
     padding: 12px 15px !important;
     font-size: 11px !important;
-  }
+  }*/
 
   /* Image w/ Caption Mobile Fix */
   figure { max-width: 260px !important; }
