--- a/sass/style.scss
+++ b/sass/style.scss
@@ -110,3 +110,5 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 # AV Custom
 --------------------------------------------------------------*/
 @import "av-misc";
+@import "av-style-1-modified";
+@import "components/button/button--read-more";
