Missing image path fix

--- a/sass/_av-style-1-modified.scss
+++ b/sass/_av-style-1-modified.scss
@@ -528,7 +528,7 @@ p.aboutme_description {
     padding: 0px;
     background-color: transparent;
     background-size: 16px 16px;
-    background-image: url('../images/icon-search.png');
+    background-image: url('../areavoices/images/icon-search.png');
     border: none;
     outline: none;
 }
