Updated jetpack social sharing font icon styling

--- a/sass/_av-style-1-modified.scss
+++ b/sass/_av-style-1-modified.scss
@@ -815,7 +815,7 @@ margin-top: 5px;
 }
 
 .av-home.av-jp-social a.sd-button:before {
-    font: 400 26px/1 Genericons;
+    font: 400 26px/1 social-logos;
 }
 
 /* --------- Tag Cloud / Popular Searches ---------- */
