--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: http://areavoices.com/
 Author: Forum Communications Company
 Author URI: http://forumcomm.com/
 Description: The custom WordPress theme built for AreaVoices contributors.
-Version: 1.16.07.11
+Version: 1.16.08.31
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: areavoices
@@ -2072,7 +2072,7 @@ ol.comment-list {
   color: #fff !important; }
 
 .av-home.av-jp-social a.sd-button:before {
-  font: 400 26px/1 Genericons; }
+  font: 400 26px/1 social-logos; }
 
 /* --------- Tag Cloud / Popular Searches ---------- */
 .tagcloud a {
