Moved comment list style fix to SASS

--- a/sass/_av-misc.scss
+++ b/sass/_av-misc.scss
@@ -63,6 +63,10 @@ i {
   float: right;
 }
 
+#comments .comment-list, #comments .children, .comment ol {
+	list-style: none;
+}
+
 .comment-navigation .nav-previous,
 .posts-navigation .nav-previous,
 .post-navigation .nav-previous {
