--- a/style.css
+++ b/style.css
@@ -769,6 +769,9 @@ i {
 .edit-link {
   float: right; }
 
+#comments .comment-list, #comments .children, .comment ol {
+  list-style: none; }
+
 .comment-navigation .nav-previous,
 .posts-navigation .nav-previous,
 .post-navigation .nav-previous {
