Fixed Featured Image Style Bug
- post-thumb-container no longer shows a bottom border if the post does not contain a featured image

--- a/sass/_av-style-1-modified.scss
+++ b/sass/_av-style-1-modified.scss
@@ -383,13 +383,15 @@ img{
 
 /* --------- CONTENT ARTICLE---------- */
 .post-thumb-container {
-    overflow: hidden;
-    margin-bottom: 32px;
-    position: relative;
-    /*background: #000;*/
-		border-bottom: 1px solid #c8d7e1;
-		box-shadow: inset 0 0 2px 2px rgba(168, 190, 206, 0.1);
-		background: rgba(233, 239, 243, 0.3) !important;
+  overflow: hidden;
+  margin-bottom: 32px;
+  position: relative;
+  /*background: #000;*/
+  box-shadow: inset 0 0 2px 2px rgba(168, 190, 206, 0.1);
+  background: rgba(233, 239, 243, 0.3) !important; }
+
+.post-thumb-container.has-featured-image {
+	border-bottom: 1px solid #c8d7e1;
 }
 
 article,
